# Replit

./: .env.example  .env.local.backup.2025-11-20  .env.local.backup.2025-11-21  .replit  @Prodia.html  @TheDrone7.html  @deno.html  DELETION_LIST.md  EXECUTION_PLAN.md  SPACE_CLEANUP_PLAN.md  about.html  additional-resources.html  agent3.html  app.py  auth.py  brandkit.html  build.html  careers.html  commercial-agreement.html  config.py  convert_static_to_dynamic.py  customers.html  download_all_assets.py  download_google_fonts.py  dpa.html  enterprise.html  gallery.html  github.html  help.html  index.html  login.html  main.py  mobile.html  models.py  news.html  package-lock.json  package.json  pricing.html  privacy-policy.html  pyproject.toml  (+12 more)
ServerAutomationAI/: .bridgeignore  .coverage  .env.example  .gitignore  AGENT2_QUICK_START.md  AGENT5_COMPREHENSIVE_REPORT.md  AI_INTELLIGENCE_ROADMAP.md  EXECUTIVE_SUMMARY.md  FINAL_HANDOFF.md  MODEL_POOL_DESIGN.md  NEXT_AGENT_HANDOFF.md  NEXT_AGENT_QUICKSTART.md  OPTIMIZED_ROADMAP.md  PHASE_0_FOUNDATION.md  PHASE_2A_COMPLETION_REPORT.md  PHASE_2A_ISSUES_AND_RECOMMENDATIONS.md  PHASE_2B_REQUIREMENTS.md  PHASE_3_ROADMAP.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESS.md  README.md  REPLIT_AGENT_COMPLETE_PLAN.md  SECURITY_ARCHITECTURE.md  agent_manager.py  bridge.config.example.yaml  bridge.config.yaml  main.py  pyproject.toml  pytest.ini  replit.md  requirements.txt  requirements_bridge.txt  setup_server_secrets.sh
ServerAutomationAI/agents/: ai_manager.py  backup_recovery.py  database_manager.py  log_analyzer.py  security_monitor.py  (+1 more)
(+660 files in other folders)
