[tool.poetry]
name = "ai-multi-agent-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^6.6.0"
rich = "^14.2.0"
pyyaml = "^6.0.3"
requests = "^2.32.5"
python-telegram-bot = "^22.5"
psycopg2-binary = "^2.9.11"
pymongo = "^4.15.4"
watchdog = "^6.0.0"
colorama = "^0.4.6"
tabulate = "^0.9.0"
python-dotenv = "^1.2.1"
cryptography = "^46.0.3"
diskcache = "^5.6.3"
litellm = "^1.80.0"
tree-sitter = "^0.25.2"
pydantic = "^2.12.4"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
selenium = "^4.38.0"
webdriver-manager = "^4.0.2"
aiosqlite = "^0.21.0"
fastapi = "0.109.0"
jinja2 = "3.1.3"
python-multipart = "^0.0.20"
uvicorn = {version = "0.27.0", extras = ["standard"]}
passlib = "^1.7.4"
pyjwt = "^2.10.1"
flask-dance = "^7.1.0"
flask-login = "^0.6.3"
oauthlib = "^3.3.1"
authlib = "^1.6.5"
itsdangerous = "^2.2.0"
sqlalchemy = "^2.0.44"
argon2-cffi = "^25.1.0"
alembic = "^1.17.2"
prometheus-client = "^0.23.1"
psutil = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
